--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/francoZuniga32/hero-bot#readme",
   "dependencies": {
+    "moment": "^2.29.1",
+    "mysql": "^2.18.1",
     "octonode": "^0.10.0",
     "telegraf": "^4.0.2"
   }
