--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "dependencies": {
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "octonode": "^0.10.0",
+    "sequelize": "^6.5.0",
     "telegraf": "^4.0.2"
   }
 }
